src/ui/sonarr_ui/indexers/snapshots/managarr__ui__sonarr_ui__indexers__edit_indexer_ui__edit_indexer_ui_tests__tests__snapshot_tests__edit_indexer_ui_renders_edit_indexer_modal.snap
---
source: src/ui/sonarr_ui/indexers/edit_indexer_ui_tests.rs
expression: output
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                  ╭─────────────────────────────────  Edit Indexer  ─────────────────────────────────╮                  
                  │                                                                                  │                  
                  │                    ╭─────────────────╮                     ╭─────────────────╮   │                  
                  │              Name: ╰─────────────────╯                URL: ╰─────────────────╯   │                  
                  │                    ╭───╮                                   ╭─────────────────╮   │                  
                  │                    ╭───╮                          API Key: ╰─────────────────╯   │                  
                  │ Enable Automatic Se╰───╯                                   ╭─────────────────╮   │                  
                  │                    ╭───╮                             Tags: ╰─────────────────╯   │                  
                  │                                                            ╭─────────────────╮   │                  
                  │                                         Indexer Priority ▴▾╰─────────────────╯   │                  
                  │                                                                                  │                  
                  │                     ╭──────────────────╮╭───────────────────╮                    │                  
                  │                     │       Save       ││      Cancel       │                    │                  
                  │                     ╰──────────────────╯╰───────────────────╯                    │                  
                  ╰──────────────────────────────────────────────────────────────────────────────────╯
